<package format="2">
  <name>adam_assem1</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for adam_assem1</p>
    <p>This package contains configuration data, 3D models and launch files
for adam_assem1 robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>urdf_launch</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  
  <export>
    <architecture_independent />
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.."/>
  </export>
</package>
